## ZOMEKI / リリース内容

2.0.0
 * Railsをv4.2.3にバージョンアップ
 * Rubyをv2.3.0にバージョンアップ