@@ -1,21 +1,0 @@
-= Copyright
-
-See COPYING
-
-= インストール
-
-== 想定環境
-
-OS:: CentOS 6.6
-Webサーバ:: Apache 2.2
-DBシステム:: MySQL 5.1
-Ruby:: 2.3
-Rails:: 4.2
-
-== 自動スクリプト
-
-  # export LANG=ja_JP.UTF-8; curl -fsSL https://raw.githubusercontent.com/zomeki/zomeki2/master/doc/install_scripts/prepare.sh | bash
-
-== 手動マニュアル
-
-- doc/INSTALL_centos.txt
