@@ -1,5 +1,6 @@
 ## ZOMEKI / リリース内容
 
 2.0.0
- * Railsをv4.2.3にバージョンアップ
- * Rubyをv2.3.0にバージョンアップ
+ * Railsを4.2.3にバージョンアップ
+ * Rubyを2.3.0にバージョンアップ
+ * MySQLを5.6にバージョンアップ
